feat : "Affirmations" tutorial
Complete the "Affirmations" tutorial and build a list with items displaying an image and a piece of text

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:theme="@style/Theme.ComposePlayground"
         tools:targetApi="31">
         <activity
-            android:name=".ui.tutorials.TipCalculatorActivity"
+            android:name=".ui.tutorials.AffirmationsActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
