--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,13 +12,17 @@
         android:theme="@style/Theme.ComposePlayground"
         tools:targetApi="31">
         <activity
-            android:name=".ui.tutorials.CoursesActivity"
+            android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity android:name=".ui.tutorials.TipCalculatorActivity" />
+        <activity android:name=".ui.tutorials.AffirmationsActivity" />
+        <activity android:name=".ui.tutorials.CoursesActivity" />
     </application>
 
 </manifest>
