feat : "Woof" tutorial
Complete the "Woof" tutorial :
 - Set app "Shapes"
 - Set a custom Font family and create app "Types"

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,7 @@
         <activity android:name=".ui.tutorials.TipCalculatorActivity" />
         <activity android:name=".ui.tutorials.AffirmationsActivity" />
         <activity android:name=".ui.tutorials.CoursesActivity" />
+        <activity android:name=".ui.tutorials.WoofActivity" />
     </application>
 
 </manifest>
