feat : "Tip Calculator" tutorial
Extract the "Tip Calculator" logic in a ViewModel component
Extract Composable components in a dedicated file

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".ui.tutorials.TipCalculatorActivity" />
+        <activity android:name=".ui.tutorials.tip.TipCalculatorActivity" />
         <activity android:name=".ui.tutorials.AffirmationsActivity" />
         <activity android:name=".ui.tutorials.CoursesActivity" />
         <activity android:name=".ui.tutorials.WoofActivity" />
