feat : "Cupcake" tutorial
Creating all screen of the "Cupcake" tutorial

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,7 @@
         <activity android:name=".ui.tutorials.CoursesActivity" />
         <activity android:name=".ui.tutorials.WoofActivity" />
         <activity android:name=".ui.tutorials.unscramble.UnscrambleActivity" />
+        <activity android:name=".ui.tutorials.cupcake.CupcakeActivity" />
     </application>
 
 </manifest>
